--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Celsius to Fahrenheit Conversor</title>
+    <title>Celsius to Fahrenheit Convertor</title>
 </head>
 <body>
     <h1>Convert Celsius to Fahrenheit / Fahrenheit to Celsius</h1>
