--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Convert Celsius to Fahrenheit / Fahrenheit to Celsius</h1>
-    <script src="celsiusToFarenheit.js"></script>
+    <script src="celsiusToFahrenheit.js"></script>
 </body>
 </html>
